# ytc-agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CYCLE_EXECUTION_GUIDE.md  Dockerfile  LANGSMITH_QUICKSTART.md  LICENSE  README.md  README_SETUP.md  STARTUP_GUIDE.md  btc_analysis.py  debug_startup.py  docker-compose.yml  init_db.py  langgraph.json  main.py  pyproject.toml  requirements.txt
.claude/agents/: README.md  ytc-contingency.md  ytc-economic-calendar.md  ytc-entry-execution.md  ytc-exit-execution.md  ytc-learning-optimization.md  ytc-logging-audit.md  ytc-market-structure.md  ytc-monitoring.md  ytc-next-session-prep.md  ytc-performance-analytics.md  ytc-risk-management.md  ytc-session-review.md  ytc-setup-scanner.md  ytc-strength-weakness.md  ytc-system-init.md  ytc-trade-management.md  ytc-trend-definition.md
agents/: base.py  contingency.py  economic_calendar.py  entry_execution.py  exit_execution.py  learning_optimization.py  logging_audit.py  market_structure.py  monitoring.py  next_session_prep.py  orchestrator.py  performance_analytics.py  risk_management.py  session_review.py  setup_scanner.py  strength_weakness.py  system_init.py  trade_management.py  trend_definition.py
config/: agent_config.yaml  mcp_config.yaml  risk_config.yaml  session_config.yaml
database/: connection.py  models.py
docs/: 00_MASTER_ORCHESTRATOR.md  01_SYSTEM_INITIALIZATION.md  02_RISK_MANAGEMENT.md  03_MARKET_STRUCTURE.md  04_ECONOMIC_CALENDAR.md  05_TREND_DEFINITION.md  06_STRENGTH_WEAKNESS.md  07_SETUP_SCANNER.md  08_ENTRY_EXECUTION.md  09_TRADE_MANAGEMENT.md  10_EXIT_EXECUTION.md  11_REAL_TIME_MONITORING.md  12_SESSION_REVIEW.md  13_PERFORMANCE_ANALYTICS.md  14_LEARNING_OPTIMIZATION.md  15_NEXT_SESSION_PREP.md  16_CONTINGENCY_MANAGEMENT.md  17_LOGGING_AUDIT.md  AGENTS_SUMMARY.md  AGENT_QUICK_REFERENCE.md  IMPLEMENTATION_GUIDE.md  LANGSMITH_SETUP.md  MCP_INTEGRATION.md  README.md  RUNNING_THE_SYSTEM.md  YTC_SUBAGENTS_GUIDE.md
examples/: README.md  inspect_workflow.py  mcp_example.py  run_simple_workflow.py  test_single_agent.py  visualize_workflow.py  ytc_subagent_workflow_example.md
skills/: fibonacci.py  pivot_detection.py
tests/: conftest.py  test_agents.py  test_agents_simple.py  test_mcp_integration.py
tests/unit/: test_pivot_detection.py  test_risk_management.py
tools/: gateway_api_client.py  hummingbot_mcp_server.py  mcp_client.py
